--- a/vehicle_js/src/main/resources/static/Index/Login.html
+++ b/vehicle_js/src/main/resources/static/Index/Login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0" />
-    <title>优交易CRM管理系统</title>
+    <title>WMS管理系统</title>
     <link rel="shortcut icon" href="../Index/images/favicon.ico1" />
     <link rel="stylesheet" type="text/css" href="../Index/bootstrap.min.css" />
     <link href="../Index/css/style.css" rel="stylesheet" />
@@ -220,7 +220,7 @@
             <div class="container2">
                 <!-- Copyright @ 2018 BMW (China) Co., Ltd. -->
                 <!--<p class="copyright"><label data-locale="LOGIN_COPY_RIGHT"/></p>-->
-                <p class="copyright">Copy Right@ 2018 南京市优交易网络有限公司 苏ICP备16098446号-3</p>
+                <p class="copyright">Copy Right@ 2018 南京市周小云办公室</p>
             </div>
         </div>
 
