--- a/vehicle_js/src/main/resources/static/Index/Main.html
+++ b/vehicle_js/src/main/resources/static/Index/Main.html
@@ -23,7 +23,7 @@
                 lang="en";
             }
             initScript();
-            $("title").text("优交易CRM管理系统");
+            $("title").text("我是一头小懒汉");
             initData();
         });
 
@@ -284,7 +284,7 @@
 <body style="scroll: no; overflow: hidden;">
 	<div id="maskLoading" class="maskLoading" style="display: block; position: absolute; top: 0%; left: 0%; width: 100%; height: 100%; background-color: white; z-index: 999997; -moz-opacity: 0.9; opacity: .90; filter: alpha(opacity=90); text-align: center;">
         <div style="width: 220px; height: 18px; position: relative; top: 30%; left: 0; margin: 0 auto;">
-            <img src="../Resource/images/loadinggif.gif" style="height: 120px; width: 120px;" alt="正在加载..." />
+            <img src="../Resource/images/gif1" style="height: 120px; width: 120px;" alt="正在加载..." />
             <div id="loading" class="easyui-progressbar" data-options="text: 'Loading...&nbsp;{value}%'" style="float: left; width: 200px; height: 18px;"></div>
             <div style="float: left; width: 16px; height: 16px; border: 1px solid #bbb;  cursor: pointer;" onclick="javascript:hideLoading();">✕</div>
         </div>
