--- a/vehicle_js/src/main/resources/static/Index/Top.html
+++ b/vehicle_js/src/main/resources/static/Index/Top.html
@@ -72,10 +72,10 @@
         showLoading();
         var href = "../Index/PasswordSet.html";
         openDialog({
-            title: "更改密码-" + $(".userInfoName span").text(),
+            title: "更改密码" + $(".userInfoName span").text(),
             id: 'PasswordSet',
-            width: 320,
-            height: 200,
+            width: 360,
+            height: 240,
             isResize: true,
             href: href
         });
