--- a/vehicle_js/src/main/resources/static/Index/Main.html
+++ b/vehicle_js/src/main/resources/static/Index/Main.html
@@ -23,7 +23,7 @@
                 lang="en";
             }
             initScript();
-            $("title").text("我是一头小懒汉");
+            $("title").text("销售台账系统");
             initData();
         });
 
