--- a/vehicle_js/src/main/resources/static/Index/Login.html
+++ b/vehicle_js/src/main/resources/static/Index/Login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0" />
-    <title>WMS管理系统</title>
+    <title></title>
     <link rel="shortcut icon" href="../Index/images/favicon.ico1" />
     <link rel="stylesheet" type="text/css" href="../Index/bootstrap.min.css" />
     <link href="../Index/css/style.css" rel="stylesheet" />
