--- a/src/main/resources/static/Index/Main.html
+++ b/src/main/resources/static/Index/Main.html
@@ -23,7 +23,7 @@
                 lang="en";
             }
             initScript();
-            $("title").text("销售台账系统");
+            $("title").text("SA_SYSTEM");
             initData();
         });
 
