--- a/src/main/resources/static/Index/Top.html
+++ b/src/main/resources/static/Index/Top.html
@@ -6,13 +6,6 @@
     <title></title>
     <link id="CustomThemeStylelink" type="text/css" rel="stylesheet" href="../Resource/css/index/customLightBlue.css"/>
     <style>
-        .logo {
-            width: 200px;
-            height: 60px;
-            background: #01b3aa;
-            float: left;
-        }
-
         .logo img {
             padding-left: 32px;
             padding-top: 10px;
@@ -28,13 +21,16 @@
 </head>
 <body>
 <div class="topBox">
-    <div class="topleft">
+    <!--<div class="topleft">-->
         <!--<div class="logo" style="background: #c5d4e4;"><a href="#"><img src="http://www.cmscl.com/template/zh-cn/images/logo.png"/></a></div>-->
-        <div class="logo" style="background-image:url(../Resource/images/haoea.bmp);"></div>
-        <div class="yw_title">
+        <div class="logo">
+            <!--style="background-image:url(../Resource/images/haoea.bmp);"-->
+            <span>ChunMinHui Life</span>
+        </div>
+      <!--  <div class="yw_title">
             <img src="" id="ywImg" style="height: 40px;margin-top:-12px;margin-left:10px;">
-            <h1 id="whcenter" style="display:inline-block"></h1></div>
-    </div>
+            <h1 id="whcenter" style="display:inline-block"></h1></div>-->
+    <!--</div>-->
     <div class="topright" style="margin-top: 9px;">
         <ul>
             <!--<li><span id="zh_en" onclick="ChangeLanguage()">English</span></li>-->
